--- a/style.css
+++ b/style.css
@@ -24,6 +24,20 @@
   align-items: center;
 }
 
+footer {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-around;
+  align-items: center;
+  margin: 3rem 0;
+  background-color: #1848a0;
+}
+
+.copyright {
+  color: #fff;
+  font-size: 1rem;
+  margin: 0;
+}
 
 @media screen and (max-width: 768px) {
   .headerElem {
