--- a/style.css
+++ b/style.css
@@ -39,6 +39,11 @@ footer {
   margin: 0;
 }
 
+#cotizador {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
 @media screen and (max-width: 768px) {
   .headerElem {
     flex-direction: row;
