--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ footer {
   flex-flow: row wrap;
   justify-content: space-around;
   align-items: center;
-  margin: 3rem 0;
+  margin-top: 3rem;
   background-color: #1848a0;
 }
 
