--- a/style.css
+++ b/style.css
@@ -46,6 +46,10 @@ footer {
   padding: 2.5rem 0;
 }
 
+#cotizadorForm {
+  padding: 2rem;
+}
+
 .banner {
   text-align: center;
   color: #5171ff;
@@ -53,7 +57,8 @@ footer {
 
 .hero {
   font-family: "Montserrat-Bold", sans-serif;
-  font-size: 2rem;
+  font-size: 2.5rem;
+  text-align: center;
 }
 
 .heroDesc {
@@ -71,12 +76,26 @@ footer {
 
 #info .col p {
   font-size: 1rem;
-  color: #5171ff;
+  color: #254dff;
   text-align: center;
 }
 
 #info .col a {
   color: #d74535;
+}
+
+.infoContainer {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+
+@media screen and (min-width: 991px) {
+  #info .col img {
+    height: 25vh;
+    width: auto;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
