--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
   flex-direction: column;
   align-items: center;
   flex-wrap: wrap;
+  color: white;
 }
 
 .mainText {
@@ -52,7 +53,6 @@ footer {
 
 .banner {
   text-align: center;
-  color: #5171ff;
 }
 
 .hero {
@@ -74,14 +74,13 @@ footer {
   font-family: "Montserrat", sans-serif;
 }
 
-#info .col p {
-  font-size: 1rem;
-  color: #254dff;
-  text-align: center;
+#info .col h4 {
+  color: #1848a0;
 }
 
-#info .col a {
-  color: #d74535;
+#info .col p {
+  font-size: 1rem;
+  text-align: center;
 }
 
 .infoContainer {
@@ -89,6 +88,13 @@ footer {
   flex-direction: column;
   flex-wrap: nowrap;
   align-items: center;
+  gap: 1.5rem;
+  padding: 1rem 0;
+}
+
+#info .col:hover {
+  transform: scale(1.15);
+  transition: 0.5s;
 }
 
 @media screen and (min-width: 991px) {
